--- a/references.bib
+++ b/references.bib
@@ -100,3 +100,10 @@
   year={2024},
   publisher={Wiley Online Library}
 }
+
+@book{putnam2000bowling,
+  title={Bowling alone: The collapse and revival of American community},
+  author={Putnam, Robert D},
+  year={2000},
+  publisher={Simon and schuster}
+}
