focusing on guide 3 revisions

--- a/04_Regional_Climate_Trends/Guides/1_Obtaining_State_Weather_Data.tex
+++ b/04_Regional_Climate_Trends/Guides/1_Obtaining_State_Weather_Data.tex
@@ -356,8 +356,10 @@ Here's the function:
 ##         print("NOAA site can stall -- if the loop errors out, try again.")
 ##     }
 ##     print("Think about something you are grateful for today!")
+##     write.csv(my.inventory, paste0(datafolder, "my.inventory.csv"), 
+##         row.names = FALSE)
 ## }
-## <bytecode: 0x3daef98>
+## <bytecode: 0x297d9e0>
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
